fix word wrap in download card

--- a/#src/scss/elements/_download-card.scss
+++ b/#src/scss/elements/_download-card.scss
@@ -17,7 +17,6 @@
     color: var(--main);
     overflow-wrap: break-word;
     word-wrap: break-word;
-    word-break: break-all;
     hyphens: auto;
     max-width: 100%;
   }
